--- a/frontpage.css
+++ b/frontpage.css
@@ -45,7 +45,7 @@ body {
 	font-family: 'Fredoka One', cursive;
     font-size: 100px;
     text-align: center;
-    margin-top: 70px;
+    margin-top: 30px;
     margin-bottom: 0;
     color: black;
 
@@ -60,7 +60,7 @@ body {
 	font-weight: 400;
   text-align: center;
   color: darkgray;
-  margin-top: -120px;
+  margin-top: -160px;
   position: absolute;
   top: 400px;
   left: 0;
@@ -75,7 +75,7 @@ span.animated-text:before
 {
     content:'perfect';
     animation: animate infinite 8s;
-    animation-delay: 7s;
+    animation-delay: 1.5s;
 }
 
 @keyframes animate
@@ -127,6 +127,57 @@ span.animated-text:before
     }
 }
 
+
+@-webkit-keyframes animate
+{
+    0%
+    {
+        content: 'perfect'
+
+    }
+    10%
+    {
+        content: 'perfect'
+    }
+    20%
+    {
+        content: 'sour'
+    }
+    30%
+    {
+        content: 'fruity'
+    }
+    40%
+    {
+        content: 'bubbly'
+    }
+    50%
+    {
+        content: 'creamy'
+    }
+    60%
+    {
+        content: 'nutty'
+    }
+    70%
+    {
+        content: 'zingy'
+    }
+    80%
+    {
+        content: 'pickled'
+    }
+    90%
+    {
+        content: 'hot'
+    }
+    100%
+    {
+        content: 'roasted'
+    }
+}
+
+
 span.animated-text {
     vertical-align: -15px;
 }
@@ -175,6 +226,14 @@ span.animated-text {
   margin-right: auto;
 
 
+}
+
+.speechbubble {
+    max-width: 80%;
+    max-height:6%;
+    position: absolute;
+    margin-top: -790px;
+    margin-left: 30px;
 }
 
 
@@ -229,7 +288,7 @@ span.animated-text {
 	font-weight: 400;
   text-align: center;
   color: darkgray;
-  margin-top: -70px;
+  margin-top: -112px;
   position: absolute;
   top: 400px;
   left: 0;
@@ -270,6 +329,14 @@ span.animated-text {
   background-image: none;
 
 
+}
+
+.speechbubble {
+    position: absolute;
+    max-width: 100%;
+    max-height: 100%;
+    margin-top: -1051px;
+    margin-left: 760px;
 }
 
 @media only screen and (min-width: 768px) {
