--- a/frontpage.css
+++ b/frontpage.css
@@ -11,15 +11,15 @@ body {
   background-repeat: no-repeat;
   background-size: 100% 90px;
   height: 10000px;
+
 }
-
-
 
 
 .burger-reload-page {
   margin-left: 20px;
   padding-right: 1px;
   margin-top: 20px;
+
 }
 
 
@@ -42,6 +42,7 @@ body {
 }
 
 .foud-logo {
+  animation-delay: 0.5s;
 	font-family: 'Fredoka One', cursive;
     font-size: 100px;
     text-align: center;
@@ -50,6 +51,7 @@ body {
     color: black;
 
 }
+
 
 
 .underneath-foud {
@@ -65,10 +67,12 @@ body {
   top: 400px;
   left: 0;
   right: 0;
+
 }
 
 .animated-text {
     color: black
+
 }
 
 span.animated-text:before
@@ -152,7 +156,12 @@ span.animated-text {
 #btn-showmehow {
       font-family: 'Montserrat', sans-serif;
       font-weight:200;
-      background-color:#FF496D; /* pink */
+      /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ff5d98+0,ef0158+100 */
+      background: #ff5d98; /* Old browsers */
+      background: -moz-linear-gradient(left, #ff5d98 0%, #ef0158 100%); /* FF3.6-15 */
+      background: -webkit-linear-gradient(left, #ff5d98 0%,#ef0158 100%); /* Chrome10-25,Safari5.1-6 */
+      background: linear-gradient(to right, #ff5d98 0%,#ef0158 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff5d98', endColorstr='#ef0158',GradientType=1 ); /* IE6-9 */
       border: none;
       color: white;
       padding: 30px 40px;
@@ -173,6 +182,11 @@ span.animated-text {
 
 }
 
+.generates {
+  text-align: center !important;
+
+}
+
 .what {
   font-family: 'Montserrat', sans-serif;
   font-size: 24px;
@@ -181,12 +195,11 @@ span.animated-text {
   margin-top: 400px;
   padding-top: 20px;
   padding-bottom: 20px;
-  background-color: darkgray;
+  background-color: white;;
   background-size: 200px;
   background-image: none;
   margin-left: auto;
   margin-right: auto;
-
 
 }
 
@@ -196,14 +209,113 @@ span.animated-text {
     position: absolute;
     margin-top: -780px;
     margin-left: 30px;
+
 }
 
+.i-feel-like-smthg {
+    display: inline-block;
+    text-align: center !important;
+
+}
+
+
+.flavour-input {
+  text-align: center !important;
+  position: relative;
+  display: inline-block;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  font-weight:300;
+  color: black;
+  float:none;
+
+}
+
+
+
+.autocomplete {
+  box-sizing: content-box;
+
+}
+
+input {
+  border: 1px solid transparent;
+  background-color: #f1f1f1;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-size: 14px;
+}
+input[type=text] {
+  background-color: #f1f1f1;
+  width: 100%;
+}
+input[type=submit] {
+  background-color: DodgerBlue;
+  color: #fff;
+  cursor: pointer;
+}
+.autocomplete-items {
+
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  /*position the autocomplete items to be the same width as the container:*/
+  top: 60%;
+  left: 50;
+  right: 50;
+}
+.autocomplete-items div {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #fff;
+  border-bottom: 1px solid #d4d4d4;
+
+}
+.autocomplete-items div:hover {
+  /*when hovering an item:*/
+  background-color: #e9e9e9;
+}
+.autocomplete-active {
+  /*when navigating through the items using the arrow keys:*/
+  background-color: #FF496D !important;
+  color: white;
+}
+
+.find-it {
+  font-family: 'Montserrat', sans-serif;
+  font-weight:200;
+  background-color: DeepSkyBlue; /* light blue */
+  border: none;
+  color: white;
+  padding: 35px 22px;
+  text-decoration: none;
+  display:inherit;
+  font-size: 16px;
+  border-radius: 12px;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.14), 0 17px 50px 0 rgba(0,0,0,0.19);
+  float: none;
+  margin-top: 50px;
+  cursor: pointer;
+  text-align: center !important;
+  display: flex; justify-content: center !important;
+
+}
+
+.find-it:hover{
+    background-color: DodgerBlue; /* dark blue */
+    box-shadow: 0 0px 0px 0 rgba(0,0,0,0), 0 0px 0px 0 rgba(0,0,0,0);
+
+}
 
 
 [class*="col-"] {
     max-width: 100%;
 
 }
+
 @media only screen and (min-width: 600px) {
 
 
@@ -223,6 +335,7 @@ span.animated-text {
 
 .foud-logo {
   font-size: 150px
+
 }
 
 .logo-by-reload-btn {
@@ -231,6 +344,7 @@ span.animated-text {
     margin-left: 70px;
     margin-top: -30.8px;
     float: left;
+
 }
 
 .text-by-reload-btn {
@@ -240,6 +354,7 @@ span.animated-text {
     margin-left: 120px;
     margin-top: -30px;
     float: left;
+
 }
 
 .underneath-foud {
@@ -255,6 +370,7 @@ span.animated-text {
   top: 400px;
   left: 0;
   right: 0;
+
 }
 
 #btn-showmehow {
@@ -271,6 +387,7 @@ span.animated-text {
       margin-top: 80px;
       box-shadow: 0 12px 16px 0 rgba(0,0,0,0.14), 0 17px 50px 0 rgba(0,0,0,0.19);
       cursor: pointer;
+
 }
 
 
@@ -279,16 +396,16 @@ span.animated-text {
   font-family: 'Montserrat', sans-serif;
   font-size: 34px;
   font-weight:300;
-  color: white;
+  text-decoration: none;
+  color: white !important;
   width: auto;
   height: auto;
   margin-top: 500px;
   padding-top: 40px;
   padding-bottom: 20px;
-  background-color: darkgray;
+  background-color: white;
   background-size: 200px;
   background-image: none;
-
 
 }
 
@@ -296,11 +413,39 @@ span.animated-text {
     position: absolute;
     max-width: 100%;
     max-height: 100%;
-    margin-top: -1051px;
-    margin-left: 760px;
+    margin-top: -1001px;
+    margin-left: 160px;
+
 }
 
-@media only screen and (min-width: 768px) {
+
+.find-it {
+  font-family: 'Montserrat', sans-serif;
+  font-weight:200;
+  background-color: DeepSkyBlue; /* light blue */
+  border: none;
+  color: white;
+  padding: 45px 72px;
+  text-decoration: none;
+  display:inherit;
+  font-size: 22px;
+  border-radius: 12px;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.14), 0 17px 50px 0 rgba(0,0,0,0.19);
+  float: left;
+  margin-top: 300px;
+  cursor: pointer;
+  text-align: center !important;
+
+}
+
+.find-it:hover{
+    background-color: DodgerBlue; /* dark blue */
+    box-shadow: 0 0px 0px 0 rgba(0,0,0,0), 0 0px 0px 0 rgba(0,0,0,0);
+
+}
+
+
+@media only screen and (min-width: 868px) {
     /* For desktop: */
     .col-1 {width: 8.33%;}
     .col-2 {width: 16.66%;}
@@ -314,6 +459,19 @@ span.animated-text {
     .col-10 {width: 83.33%;}
     .col-11 {width: 91.66%;}
     .col-12 {max-width: 100%;}
+
+
+    .speechbubble {
+        position: absolute;
+        max-width: 100%;
+        max-height: 100%;
+        margin-top: -1001px;
+        margin-left: 490px;
+
+    }
+
+
+
 
 
 }
